--- a/signin.html
+++ b/signin.html
@@ -15,7 +15,7 @@
         </header>
         <div class="container">
         <div class="box">
-            <h1 class="signin">Sign In</h1>
+            <h1 class="signin">Sign In -</h1>
             <form>
                 <div class="in"><input type="email" placeholder="Email or phone number"><span id="placeholder">Email or phone number</span></div>
                 <div class="in"><input type="password" placeholder="Password"><span id="placeholder">Password</span></div>
